[gd_scene load_steps=8 format=3 uid="uid://cn4sis57vp3si"]

[ext_resource type="Script" uid="uid://1mdyx3r003t5" path="res://scripts/GDTV_game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://bxwkn2loq162x" path="res://icon.svg" id="2_lbhrr"]
[ext_resource type="Theme" uid="uid://cb2tqos08yhkd" path="res://assets/starterTemplate/MinimalUI/MinimalUI.tres" id="3_p57ef"]
[ext_resource type="PackedScene" uid="uid://bla5sb547sjk4" path="res://scenes/characters/crab.tscn" id="3_u5sy4"]
[ext_resource type="Script" uid="uid://d2xagsas6h21r" path="res://scripts/player.gd" id="4_gee14"]
[ext_resource type="PackedScene" uid="uid://603k3vy4p3f1" path="res://scenes/starterTemplate/settings.tscn" id="4_u5sy4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iywne"]
size = Vector2(127.602, 128.022)

[node name="GDTVGame" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="Floor" type="Sprite2D" parent="."]
position = Vector2(549.5, 610.5)
scale = Vector2(8.38281, 0.351563)
texture = ExtResource("2_lbhrr")

[node name="StaticBody2D" type="StaticBody2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/StaticBody2D"]
position = Vector2(0.198975, -0.0111084)
shape = SubResource("RectangleShape2D_iywne")

[node name="Crab" parent="." instance=ExtResource("3_u5sy4")]
position = Vector2(101, 520)
_acceleration = 12.0
_deceleration = 20.0
_jump_height = 1.0
_air_control = 0.1

[node name="Player" type="Node" parent="Crab"]
script = ExtResource("4_gee14")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_p57ef")

[node name="PauseMenu" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="CanvasLayer/Panel/PauseMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenu")
focus_neighbor_bottom = NodePath("../Option")
theme = ExtResource("3_p57ef")
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="Option" type="Button" parent="CanvasLayer/Panel/PauseMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../MainMenu")
theme = ExtResource("3_p57ef")
theme_override_font_sizes/font_size = 24
text = "Option"

[node name="MainMenu" type="Button" parent="CanvasLayer/Panel/PauseMenu"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../Option")
focus_neighbor_bottom = NodePath("../Resume")
theme = ExtResource("3_p57ef")
theme_override_font_sizes/font_size = 24
text = "Main Menu
"

[node name="Settings" parent="CanvasLayer/Panel" node_paths=PackedStringArray("pre_scene") instance=ExtResource("4_u5sy4")]
visible = false
layout_mode = 1
pre_scene = NodePath("../../..")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(186, 512)
zoom = Vector2(3, 3)

[connection signal="pressed" from="CanvasLayer/Panel/PauseMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/PauseMenu/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/PauseMenu/MainMenu" to="." method="_on_main_menu_pressed"]
